# seq2rel

./: .allennlp_plugins  .coveragerc  .flake8  .gitignore  README.md  README.rst  codecov.yml  demo.py  mypy.ini  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml
.streamlit/: config.toml
notebooks/: reproducing_results.ipynb  training.ipynb
scripts/: preprocess_ade.py  preprocess_bc5cdr.py
seq2rel/: __init__.py  dataset_reader.py  seq2rel.py
seq2rel/common/: util.py
seq2rel/data/dataset_readers/: __init__.py  copynet_seq2rel.py
seq2rel/data/tokenizers/: pretrained_transformer_tokenizer_seq2rel.py
seq2rel/metrics/: __init__.py  average_length.py  fbeta_measure_seq2rel.py  valid_sequences.py
seq2rel/models/: constraint.py  constraints.py  copynet_seq2rel.py
seq2rel/modules/attention/: __init__.py  dk_scaled_dot_product_attention.py  multihead_attention.py  scaled_dot_product_attention.py
seq2rel/nn/: constraints.py
seq2rel/seq2rel/common/: util.py
seq2rel/seq2rel/metrics/: __init__.py  fbeta_measure_seq2rel.py
seq2rel/seq2rel/models/: __init__.py
seq2rel/seq2rel/modules/: __init__.py
seq2rel/seq2rel/modules/attention/: __init__.py  scaled_dot_product_attention.py
seq2rel/training/callbacks/: __init__.py  concatenation_augmentation.py
test_fixtures/: common.libsonnet  experiment.jsonnet
test_fixtures/copynet_seq2rel/: common.libsonnet  experiment.jsonnet
test_fixtures/data/: test.txt  train.tsv  valid.tsv
tests/: conftest.py  test_dataset_reader.py  test_seq2rel.py
tests/common/: test_util.py
tests/data/tokenizers/: test_pretrained_transformer_tokenizer_seq2rel.py
tests/metrics/: test_average_length.py  test_fbeta_measure_seq2rel.py  test_valid_sequences.py
tests/models/: test_constraints.py  test_copynet_seq2rel.py  test_seq2rel.py
tests/modules/attention/: test_multihead_attention.py
tests/nn/: test_constraints.py
tests/training/callbacks/: test_concatenation_augmentation.py
training_config/: cdr.jsonnet  cdr_hints.jsonnet  dgm.jsonnet  dgm_hints.jsonnet  docred.jsonnet  gda.jsonnet  gda_hints.jsonnet  transformer_copynet.jsonnet  transformer_copynet_ade.jsonnet  transformer_copynet_bc5cdr.jsonnet  transformer_copynet_biogrid.jsonnet  transformer_copynet_common.libsonnet  transformer_copynet_docred.jsonnet  transformer_copynet_gda.jsonnet
