[tool.poetry]
name = "seq2rel"
version = "0.1.0"
description = "A Python package that makes it easy to use sequence-to-sequence (seq2seq) learning for information extraction."
license = "Apache-2.0"
authors = ["johngiorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/johngiorgi/seq2rel"
repository = "https://github.com/johngiorgi/seq2rel"
documentation = "https://github.com/johngiorgi/seq2rel"
keywords = [
    "named entity recognition",
    "relation extraction",
    "information extraction",
    "seq2seq"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
exclude = ["tests", "test_fixtures", "training_config"]

[tool.poetry.dependencies]
python = "^3.7.1"
typer = {extras = ["all"], version = "^0.4.0"}
allennlp = "^2.6.0"
allennlp-models = "^2.6.0"
allennlp-optuna = { version = "^0.1.6", optional = true }
validators = "^0.18.2"
more-itertools = "^8.10.0"

[tool.poetry.extras]
optuna = ["allennlp-optuna"]

[tool.poetry.dev-dependencies]
black = "^21.4b2"
flake8 = "^4.0.1"
hypothesis = "^6.34.1"
mypy = "^0.930"
pytest = "^6.2.3"
pytest-cov = "^3.0.0"
coverage = "^6.0"
codecov = "^2.1.12"
# This is required to run the demo. Because streamlit installs
# all dev dependencies, we stick it here.
pyvis = "^0.1.9"

# This configuration is borrowed from: https://github.com/allenai/allennlp/blob/main/pyproject.toml
[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry-core>=1.1.12"]
build-backend = "poetry.core.masonry.api"
